--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -22,4 +22,7 @@ body.ember-application {
   .cms-markdown-editor textarea {
     font-family: monospace;
   }
+  .cms-markdown-editor-footer {
+    margin-top: 1em;
+  }
 }
