--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -55,3 +55,33 @@ body.ember-application {
     }
   }
 }
+
+body.ember-application .cms-icon-add {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  height: 12px;
+  width: 12px;
+
+  &:before, &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    box-shadow: inset 0 0 0 999px;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+
+  &:before {
+    height: 100%;
+    width: 2px;
+  }
+
+  &:after {
+    width: 100%;
+    height: 2px;
+  }
+}
