--- a/app/templates/components/cms-markdown-editor.hbs
+++ b/app/templates/components/cms-markdown-editor.hbs
@@ -1,6 +1,13 @@
 <div class="cms cms-markdown-editor">
   {{cms-expanding-textarea value=value}}
 
+  <div class="cms-text cms-markdown-editor-footer">
+    <a class="cms-link cms-insert-app-snippet-btn" {{action 'insertApp' on='mouseDown'}}>
+      <i class="cms-icon cms-icon-add"></i>
+      Insert app
+    </a>
+  </div>
+
   {{#ember-wormhole to="cms-global-components"}}
     <div class="cms cms-markdown-toolbar {{if toolbarOpen 'cms-open'}}" style="top: {{toolbarY}}px; left: {{toolbarX}}px">
       <a class="cms cms-toolbar-button" {{action 'h1' on='mouseDown'}}>
