--- a/app/templates/components/cms-markdown-editor.hbs
+++ b/app/templates/components/cms-markdown-editor.hbs
@@ -1,8 +1,8 @@
 <div class="cms cms-markdown-editor">
   {{cms-expanding-textarea value=value}}
 
-  <link href="{{ eagerCMSDomain }}/build/css/client.css" rel="stylesheet">
-  <script src="{{ eagerCMSDomain }}/build/js/client.js"></script>
+  <link href="{{ eagerCMSDomain }}/css/client.css" rel="stylesheet">
+  <script src="{{ eagerCMSDomain }}/js/client.js"></script>
 
   <div class="cms-text cms-markdown-editor-footer">
     <a class="cms-link cms-insert-app-snippet-btn" {{action 'insertApp' on='mouseDown'}}>
